--- a/ghi/src/index.css
+++ b/ghi/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-  background-color: #282c34;
+  background-color: #8a1a12;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -21,6 +21,10 @@ code {
 @font-face {
   font-family: 'Breaking Italic C';
   src: local('Breaking Italic C'), url('./fonts/BreakingitalicpersonaluseCni-8MlmJ.otf') format('truetype');
-  /* Add other font formats (e.g., woff, woff2) if available */
+}
+
+@font-face {
+  font-family: 'Courier New';
+  src: local('Courier New'), url('./fonts/cour.ttf') format('truetype');
 }
 
